# kaiku

./: .gitignore  00_the_world.md  01_characters.md  02_selli_scene.md  03_open_door.md  AI_CONTEXT.md  BUILD.md  CHARACTERS.md  CLAUDE.md  CLAUDE_kaamos.md  CLAUDE_kaamos_os.md  CMakeLists.txt  COPYRIGHT.md  GAMEDRAFT.md  HEX_MATH.md  KAAMOS_DE.md  PR.md  README.md  SILENCE_MECHANIC.md  STYLE.md  TUTORIAL_OUTLINE.md  VSCOMMUNITY_TUTORIAL.md  WORLDBUILDING.md  ara_sanoisi.md  authors_notes.md  deploy_games.sh  front_matter.md  glyph_count.py  hiljaisuus_choir.ly  hiljaisuus_ir.py  index.html  kaamos.asm  kaamos.com  kaamos.css  kaamos_template.html  kaiku-session-brief.md  kaiku_cue_sheet.md  kantakirja.md  lane_run.html  moonsorrow_notes.md  (+9 more)
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/FM/: FMEngine.cpp  FMEngine.h  FMOperator.cpp  FMOperator.h
Source/GUI/: KaamOSLookAndFeel.cpp  KaamOSLookAndFeel.h
Source/Synth/: KaikuVoice.cpp  KaikuVoice.h  VoiceManager.cpp  VoiceManager.h
arch/: bibliography.md  sid_brief.md  sid_patch_plan.md  time.md  webapi.md
arch/real_sid/: brief.md
characters/: aava.md  ara.md  eerikki.md  emo.md  ground_crew.md  selli.md  selli_and_aava.md  taavetti.md
comp/: README.md  front_matter.md  kaiku_riddim.ly  kaiku_track_brief.md  prompts_all.ly
comp/percussion/: berlin_punk.sfz  drumkit_addictive_drums.md  drumkit_berlin_punk.md  drumkit_ezdrummer2.md  drumkit_flstudio.md  drumkit_wavetable.md  percussion_brief.md
contrib/: AI.md  BUGS.md  CONDUCT.md  MISSION.md  READING.md  SANASTO.md  STYLE.md  spektri.html  väri.html
eerikki-muistaa.scriv/: eerikki-muistaa.scrivx
eerikki-muistaa.scriv/Files/: binder.autosave  binder.backup  styles.xml
eerikki-muistaa.scriv/Files/Data/: docs.checksum
eerikki-muistaa.scriv/Settings/: compile.xml  favorites.xml  projectpreferences.xml  recents.txt  templateinfo.xml  ui-common.xml  ui.ini
games/: README.md  birch.html  kuule.html
ir/: README.md  forest_ir_spec.md  ir_settings.md
kaiku/Source/: PluginProcessor.h
kaiku/Source/FM/: FMEngine.cpp
sounds/doru/: bitcrush.py  collect_doru.sh  doru_pipeline.md  essay_the_well.md
suomi/: lapikatse.md  sanasto.md  tyokalupakki.md
vsti/: CMakeLists.txt  PLAN.md  SPEC.md
vsti/Source/: PluginEditor.h  PluginProcessor.cpp
vsti/Source/FM/: FMEngine.cpp
vsti/Source/GUI/: KaamOSLookAndFeel.h
vsti/Source/Synth/: KaikuVoice.cpp
(+26 files in other folders)
